--- a/wp-content/themes/dannys-base/css/default.css
+++ b/wp-content/themes/dannys-base/css/default.css
@@ -1,6 +1,6 @@
 * {
 	padding:0;
-	margin:0;
+	/*margin:0;*/
 	position: relative;
 }
 
@@ -39,7 +39,22 @@ table {
 	width:100%;
 	border:1px solid #ccc;
 }
-
+th, td {
+	border: 1px solid #ccc;
+	padding: .2em;
+}
+.meta.group {
+	width: 100%;
+	float: left;
+	margin: .3em 0;
+	padding: .3em 0;
+}
+.signature {
+	float: left;
+	font-size: .8em;
+	color: #333;
+	border-right: 1px solid #333;
+}
 pre {
  white-space: pre-wrap;       /* css-3 */
  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
