--- a/wp-content/themes/dannys-base/css/default.css
+++ b/wp-content/themes/dannys-base/css/default.css
@@ -1,13 +1,23 @@
-* {
+*, *:before, *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 	padding:0;
-	/*margin:0;*/
 	position: relative;
+}
+div {
+	margin: 0;
 }
 
 style, script, title {
 	display: none;
 }
-
+p {
+	margin:15px 0 0;
+}
+.clear {
+	clear:both;
+}
 body {
 	background:#fff;
 	font-family:'Open Sans', Arial, sans-serif;
@@ -18,12 +28,12 @@ body {
 }
 
 a {
-	color:#333;
+	color:#777;
 	text-decoration:none;
 }
 
 a:hover {
-	color:#999;
+	color:#bada55;
 }
 img {
 	max-width: 100%;
@@ -37,31 +47,46 @@ blockquote{
 
 table {
 	width:100%;
-	border:1px solid #ccc;
+	border:1px solid #bada55;
 }
 th, td {
-	border: 1px solid #ccc;
+	border: 1px solid #bada55;
 	padding: .2em;
+}
+.main.entry-content.group div {
+	max-width: 100%;
+
 }
 .meta.group {
 	width: 100%;
 	float: left;
 	margin: .3em 0;
 	padding: .3em 0;
+	border-top: 1px solid #bada55;
+}
+.meta.group p{
+	margin: 0;
 }
 .signature {
 	float: left;
 	font-size: .8em;
-	color: #333;
-	border-right: 1px solid #333;
+	color: #bada55;
+	border-right: 1px solid #bada55;
+	padding: 0 1em 0 0;
+}
+.tags {
+	float: left;
+	font-size: .8em;
+	color: #bada55;
+	padding:0 0 0 1em;
 }
 pre {
- white-space: pre-wrap;       /* css-3 */
- white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
- white-space: -pre-wrap;      /* Opera 4-6 */
- white-space: -o-pre-wrap;    /* Opera 7 */
- word-wrap: break-word;       /* Internet Explorer 5.5+ */
- width: 100%;
+	white-space: pre-wrap;       /* css-3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1bada55 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
+	width: 100%;
 }
 
 h1 {
@@ -100,17 +125,20 @@ h6 {
 	width:48.75em;
 }
 
-#content div {
+#content > div {
 	max-width: 100%;
+	height: 1%;
+	overflow: hidden;
+	clear: both;
 }
 
 .sticky {
-	background-color: #ccc;
+	background-color: #111;
 	padding: 2rem;
 }
 
 .comments {
-	color:#333;
+	color:#bada55;
 	margin:0 0 15px 0;
 	border-bottom:#bbb 1px solid;
 }
@@ -118,7 +146,7 @@ h6 {
 .comments a {
 	background:#fff;
 	padding:0 7px 5px 0;
-	color:#333;
+	color:#bada55;
 	text-decoration:none;
 }
 
@@ -141,7 +169,7 @@ h6 {
 }
 
 .navigation a:hover {
-	color:#333;
+	color:#bada55;
 	text-decoration:none;
 }
 
@@ -165,7 +193,7 @@ h6 {
 	font-size:12px;
 	float:right;
 	width:11.25em;
-	border-left:#999 1px solid;
+	border-left:#bada55 1px solid;
 	padding:0 0 20px 15px;
 	margin:0 0 20px 0;
 }
@@ -200,8 +228,8 @@ h6 {
 }
 
 #searchform input:hover {
-	background-color:#333;
-	border:#999 1px solid;
+	background-color:#bada55;
+	border:#bada55 1px solid;
 	color:#fff;
 	cursor:pointer;
 }
@@ -251,9 +279,9 @@ input[type=submit] {
 
 input.submit:hover,
 input[type=submit]:hover {
-	background-color:#333;
+	background-color:#bada55;
 	cursor:pointer;
-	border:#999 1px solid;
+	border:#bada55 1px solid;
 	color:#fff;
 }
 
@@ -276,7 +304,7 @@ input[type=submit]:hover {
 }
 
 #footer a:hover {
-	color:#333;
+	color:#bada55;
 	text-decoration:none;
 }
 
@@ -374,7 +402,7 @@ input:focus, textarea:focus {
 #access a {
 	color: #eee;
 	display: block;
-	line-height: 3.333em;
+	line-height: 3.bada55em;
 	padding: 0 1.2125em;
 	text-decoration: none;
 }
@@ -386,10 +414,10 @@ input:focus, textarea:focus {
 	float: left;
 	margin: 0;
 	position: absolute;
-	top: 3.333em;
+	top: 3.bada55em;
 	left: 0;
 	width: 188px;
-	z-index: 99999;
+	z-index: bada5599;
 }
 #access ul ul ul {
 	left: 100%;
@@ -479,12 +507,6 @@ input:focus, textarea:focus {
 #supplementary.four .widget-area + .widget-area + .widget-area {
 	margin-right: 0;
 }
-p {
-	margin:15px 5px;
-}
-.clear {
-	clear:both;
-}
 #s {
 	float: right;
 	-webkit-transition-duration: 400ms;
@@ -507,6 +529,6 @@ p {
 }
 button {
 	padding:5px;
-	background-color:#CCC;
+	background-color:#bada55;
 	cursor:pointer;
 }
